--- a/css/style.less
+++ b/css/style.less
@@ -2,6 +2,9 @@
  *
  *	PROJEKT_NAME - Copyright 2017
  *	LESS -> CSS Please use Compiler
+ *  
+ *  Advanced-Boilerplate - v.1.1.0
+ *  https://github.com/Thejuse/Advanced-Boilerplate
  *
  */
 
@@ -16,6 +19,7 @@
  *
  */
 
+@import "external/fontawesome/font-awesome-4.7/less/font-awesome.less";
 @import "external/animatecss/animate.css";
 @import "external/hamburger/hamburger.css";
 @import "external/slick/slick.less";
