--- a/css/setup.less
+++ b/css/setup.less
@@ -8,8 +8,8 @@
 @import url('external/bootstrap/bootstrap.min.css');
 //	Bootstrap - v.3.3.7
 // @import url('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css');
-@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 @import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 @cBlack: #000;
 @cWhite: #fff;
