--- a/css/style.less
+++ b/css/style.less
@@ -3,7 +3,7 @@
  *	PROJEKT_NAME - Copyright 2017
  *	LESS -> CSS Please use Compiler
  *  
- *  Advanced-Boilerplate - v.1.4.0
+ *  Advanced-Boilerplate - v.1.5.0
  *  https://github.com/Thejuse/Advanced-Boilerplate
  *
  */
@@ -30,3 +30,4 @@
 @import "external/sweetalert/sweetalert.css";
 @import "external/hovercss/hover.less";
 @import "external/mmenu/jquery.mmenu.all.css";
+@import "external/cookieconsent/cookieconsent.css";
