Fixed FontAwesome & Google MaterialIcons

--- a/clean-template/less/style.less
+++ b/clean-template/less/style.less
@@ -19,14 +19,14 @@
 // @import "external/bootstrap/bootstrap-4.0/bootstrap.css";
 @import "external/bootstrap/bootstrap-3.3.7/bootstrap.css";
 @import "external/animatecss/animate.css";
-@import "external/hamburgercss/hamburger.css";
-// @import "external/fontawesome/font-awesome-4.7/font-awesome.less";
-@import "external/fontawesome/font-awesome-5.0/fontawesome.less";
+@import "external/hamburgercss/hamburgers.css";
+// @import "external/fontawesome/font-awesome-4.7/less/font-awesome.less";
+@import "external/fontawesome/font-awesome-5.0/less/fontawesome.less";
 @import "external/MaterialIcons/material-icons.less";
 @import "external/hovercss/hover.less";
 @import "external/slick/slick.less";
 @import "external/slick/slick-theme.less";
 @import "external/magnificpopup/magnific-popup.css";
 @import "external/mmenu/jquery.mmenu.all.css";
-@import "external/cookieconsent/cookieconsent.js";
+@import "external/cookieconsent/cookieconsent.css";
 @import "external/card/card.css";
