--- a/clean-template/less/style.less
+++ b/clean-template/less/style.less
@@ -10,6 +10,11 @@
  */
 
 @import "external/socialcolors/socialcolors.less";
+@import "setup.less";
+@import "typography.less";
+@import "_partials/header.less";
+@import "_partials/footer.less";
+@import "structure.less";
 
  /*
   *
