--- a/clean-template/less/style.less
+++ b/clean-template/less/style.less
@@ -26,7 +26,8 @@
 @import "external/animatecss/animate.css";
 @import "external/hamburgercss/hamburgers.css";
 // @import "external/fontawesome/font-awesome-4.7/less/font-awesome.less";
-@import "external/fontawesome/font-awesome-5.0/less/fontawesome.less";
+// @import "external/fontawesome/font-awesome-5.0/less/fontawesome.less";
+@import "external/fontawesome/font-awesome-5.0.1/less/fontawesome.less";
 @import "external/MaterialIcons/material-icons.less";
 @import "external/hovercss/hover.less";
 @import "external/slick/slick.less";
