Changelog & Less-Files
Added Changelog
Added ContentElement demo
Added Less-Variables
Added Less-Demo content

--- a/boilerplate/less/_config/other.less
+++ b/boilerplate/less/_config/other.less
@@ -1,3 +1,6 @@
+/*
+ *  Other Stylings & Helpers
+ */
 .display-table {
 	display: table;
 	width: 100%;
@@ -50,15 +53,15 @@
 .spacer-small {
     display: block;
     width: 100%;
-    // margin-top: @vSpacingSmall;
+    margin-top: @spacingSmall;
 }
 .spacer-normal {
     display: block;
     width: 100%;
-    // margin-top: @vSpacingNormal;
+    margin-top: @spacingNormal;
 }
 .spacer-large {
     display: block;
     width: 100%;
-    // margin-top: @vSpacingLarge;
+    margin-top: @spacingLarge;
 }
