--- a/boilerplate/less/main.less
+++ b/boilerplate/less/main.less
@@ -18,6 +18,7 @@
 @import "_structure/footer.less";
 
 // ContentElements
+@import "_content_elements/demo.less";
 
 // External
 @import "_external/_bootstrap/bootstrap-reboot.min.css.less";
