Less folder naming update

--- a/less-version/boilerplate/less/main.less
+++ b/less-version/boilerplate/less/main.less
@@ -7,19 +7,19 @@
 */
 
 // Configuration
-@import "_config/fonts.less";
-@import "_config/variables.less";
-@import "_config/typography.less";
-@import "_config/other.less";
+@import "config/fonts.less";
+@import "config/variables.less";
+@import "config/typography.less";
+@import "config/other.less";
 
 // Structure
-@import "_structure/header.less";
-@import "_structure/structure.less";
-@import "_structure/footer.less";
+@import "structure/header.less";
+@import "structure/structure.less";
+@import "structure/footer.less";
 
 // ContentElements
-@import "_content_elements/demo.less";
+@import "content_elements/demo.less";
 
 // External
-@import "_external/_bootstrap/bootstrap-reboot.css.less";
-@import "_external/_bootstrap/bootstrap.css.less";
+@import "external/bootstrap/bootstrap-reboot.css.less";
+@import "external/bootstrap/bootstrap.css.less";
